ajout mixins css menu comme paroisse ok en responsive pb sous menu alignement

--- a/Index.html
+++ b/Index.html
@@ -10,31 +10,33 @@
 </head>
 
 <body>
+    <header>
     <nav>
         <div id="mySidenav" class="sidenav">
             <a id="closeBtn" href="#" class="close">×</a>
-            <ul class="menu">
-                <li><a href="#"> Accueil </a></li>
-                <li><a href="#">Office</a></li>
-                <li class="deroulant"><a href="#">Compétences</a>
-                    <ul class="sous">
-                        <li><a href="#">Droit Immobilier</a></li>
-                        <li><a href="#">Droit de la Famille</a></li>
-                        <li><a href="#">Droit des Affaires</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Liens utiles</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
-    <a href="#" id="openBtn">
-        <span class="burger-icon">
-            <span></span>
-            <span></span>
-            <span></span>
-    </a>
+                <ul class="menu">
+                    <li><a href="#"> Accueil </a></li>
+                    <li><a href="#">Office</a></li>
+                    <li class="deroulant"><a href="#">Compétences</a>
+                        <ul class="sous">
+                            <li><a href="#">Droit Immobilier</a></li>
+                            <li><a href="#">Droit de la Famille</a></li>
+                            <li><a href="#">Droit des Affaires</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Liens utiles</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+</div>
+</nav>
 
+<a href="#" id="openBtn">
+  <span class="burger-icon">
+    <span></span>
+    <span></span>
+    <span></span>
+</a>
+</header>
 </body>
 
 </html>
