refonte menu avec display flex en desktop

--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,104 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link href="/css/style.css" rel="stylesheet" />
+    <script src="./js/script.js" defer></script>
+  </head>
+  <body>
+    <!-- <div class="topnav" id="myTopnav">
+      <!-- <a href="#home" class="active">Home</a> -->
+    <!-- <ul class="menu"> -->
+    <!-- <ul> -->
+    <!-- <li><a href="#"> Accueil </a></li> -->
+
+    <!-- 
+      <a href="#">Office</a>
+       <li class="deroulant"> 
+      <ul>
+        <a href="#">Compétences</a>
+        <!-- <ul class="sous">--
+        <li><a href="#">Droit Immobilier</a></li>
+        <li><a href="#">Droit de la Famille</a></li>
+        <li><a href="#">Droit des Affaires</a></li>
+      </ul>
+      <!-- </li> --
+      <a href="#">Liens utiles</a>
+      <a href="#">Contact</a> -->
+    <!-- <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a> -->
+    <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a> -->
+    <!-- </ul> -->
+    <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div> -->
+
+    <div class="topnav" id="myTopnav">
+      <a href="#home" class="active">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <div class="dropdown">
+        <button class="dropbtn">
+          Dropdown
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+        </div>
+      </div>
+      <a href="#about">About</a>
+      <a
+        href="javascript:void(0);"
+        style="font-size: 15px"
+        class="icon"
+        onclick="myFunction()"
+        >&#9776;</a
+      >
+    </div>
+
+    <div style="padding-left: 16px">
+      <h2>Responsive Topnav with Dropdown</h2>
+      <p>Resize the browser window to see how it works.</p>
+      <p>Hover over the dropdown button to open the dropdown menu.</p>
+    </div>
+
+    <div style="padding-left: 16px">
+      <h2>Responsive Topnav Example</h2>
+      <p>Resize the browser window to see how it works.</p>
+    </div>
+  </body>
+</html>
+
+<!-- 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -30,7 +130,7 @@
                 <li>Your Account</li>
                 <li>Contact Us</li>
               </ul> -->
-              <ul class="menu">
+<!-- <ul class="menu">
                 <li><a href="#"> Accueil </a></li>
                 <li><a href="#">Office</a></li>
                 <li class="deroulant">
@@ -64,8 +164,8 @@
               </p>
             </main>
           </div>
-        </div>
-        <!-- <div id="mySidenav" class="sidenav">
+        </div> -->
+<!-- <div id="mySidenav" class="sidenav">
             <a id="closeBtn" href="#" class="close">×</a>
                 <ul class="menu">
                     <li><a href="#"> Accueil </a></li>
@@ -81,16 +181,17 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
 </div> -->
-      </nav>
+<!-- </nav> -->
 
-      <!-- <a href="#" id="openBtn">
+<!-- <a href="#" id="openBtn">
   <span class="burger-icon">
     <span></span>
     <span></span>
     <span></span>
 </a> -->
-    </header>
+<!-- </header>
     <main><h1>Test</h1></main>
     <footer><p>Paragraphe</p></footer>
   </body>
-</html>
+</html> -->
+--> -->
