--- a/Index.html
+++ b/Index.html
@@ -45,12 +45,22 @@
       <a href="#home" class="active">Home</a>
       <a href="#news">News</a>
       <a href="#contact">Contact</a>
-      <div class="dropdown">
+      <!-- <div class="dropdown">
         <button class="dropbtn">
           Dropdown
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+        </div>
+      </div>
+      -->
+      -->
+      <div class="dropdown2">
+        <button onclick="myFunction2()" class="dropbtn">Dropdown</button>
+        <div id="myDropdown" class="dropdown-content">
           <a href="#">Link 1</a>
           <a href="#">Link 2</a>
           <a href="#">Link 3</a>
