ajout carousel avec photos d'origine de la gallery

--- a/Index.html
+++ b/Index.html
@@ -73,6 +73,19 @@
     <div style="padding-left: 16px">
       <h2>Responsive Topnav Example</h2>
       <p>Resize the browser window to see how it works.</p>
+      <div class="gallery">
+        <img src="https://picsum.photos/id/199/400/300" alt="the beach" />
+        <img
+          src="https://picsum.photos/id/1011/400/300"
+          alt="a girl doing kayak"
+        />
+        <img
+          src="https://picsum.photos/id/124/400/300"
+          alt="a small boat in the sea"
+        />
+        <img src="https://picsum.photos/id/235/400/300" alt="a mountain" />
+        <img src="https://picsum.photos/id/423/400/300" alt="a forest" />
+      </div>
     </div>
   </body>
 </html>
