--- a/Index.html
+++ b/Index.html
@@ -74,17 +74,15 @@
       <h2>Responsive Topnav Example</h2>
       <p>Resize the browser window to see how it works.</p>
       <div class="gallery">
-        <img src="https://picsum.photos/id/199/400/300" alt="the beach" />
+        <img src="./assets/images/Façade 1_LI.jpg" alt="Façade étude large" />
+        <img src="./assets/images/Façade 3.jpg" alt="façade entréée" />
+        <img src="./assets/images/Bureau 2.jpg" alt="Bureau image2" />
         <img
-          src="https://picsum.photos/id/1011/400/300"
-          alt="a girl doing kayak"
+          src="./assets/images/Panonceau de notaire.jpg"
+          alt="Panonceau de notaire"
         />
-        <img
-          src="https://picsum.photos/id/124/400/300"
-          alt="a small boat in the sea"
         />
-        <img src="https://picsum.photos/id/235/400/300" alt="a mountain" />
-        <img src="https://picsum.photos/id/423/400/300" alt="a forest" />
+        <img src="./assets/images/Bureau 3.jpg" alt="Bureau image1" />
       </div>
     </div>
   </body>
