ajout des 2 logos

--- a/Index.html
+++ b/Index.html
@@ -40,7 +40,13 @@
         <i class="fa fa-bars"></i>
       </a>
     </div> -->
-
+    <div class="logo-container">
+      <img src="./assets/images/logo.png" alt="logo-Sulpice" />
+      <img
+        src="./assets/images/notaire-de-fance-logo-777C89063C-seeklogo.com.png"
+        alt="logo-notaire"
+      />
+    </div>
     <div class="topnav" id="myTopnav">
       <a href="#home" class="active">Home</a>
       <a href="#news">News</a>
