--- a/Index.html
+++ b/Index.html
@@ -70,7 +70,7 @@
       >
     </div>
 
-    <div style="padding-left: 16px">
+    <!-- <div style="padding-left: 16px">
       <h2>Responsive Topnav with Dropdown</h2>
       <p>Resize the browser window to see how it works.</p>
       <p>Hover over the dropdown button to open the dropdown menu.</p>
@@ -78,7 +78,7 @@
 
     <div style="padding-left: 16px">
       <h2>Responsive Topnav Example</h2>
-      <p>Resize the browser window to see how it works.</p>
+      <p>Resize the browser window to see how it works.</p> -->
       <div class="gallery">
         <img src="./assets/images/Façade 1_LI.jpg" alt="Façade étude large" />
         <img src="./assets/images/Façade 3.jpg" alt="façade entréée" />
