centrage gallery et redimmensionnage des logos

--- a/Index.html
+++ b/Index.html
@@ -79,6 +79,7 @@
     <div style="padding-left: 16px">
       <h2>Responsive Topnav Example</h2>
       <p>Resize the browser window to see how it works.</p> -->
+      <div class="gallery-container">
       <div class="gallery">
         <img src="./assets/images/Façade 1_LI.jpg" alt="Façade étude large" />
         <img src="./assets/images/Façade 3.jpg" alt="façade entréée" />
@@ -90,6 +91,7 @@
         />
         <img src="./assets/images/Bureau 3.jpg" alt="Bureau image1" />
       </div>
+    </div>
     </div>
   </body>
 </html>
