height 50px topnav

--- a/Index.html
+++ b/Index.html
@@ -60,7 +60,17 @@
           <a href="#">Link 3</a>
         </div>
       </div>
+      <div class="dropdown3">
+        <button class="dropbtn3">Dropdown</button>
+        <div class="dropdown-content3">
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+        </div>
+      </div>
+
       <a href="#about">About</a>
+  
       <a
         href="javascript:void(0);"
         style="font-size: 15px"
@@ -68,6 +78,7 @@
         onclick="myFunction()"
         >&#9776;</a
       >
+
     </div>
 
     <!-- <div style="padding-left: 16px">
@@ -92,6 +103,14 @@
         <img src="./assets/images/Bureau 3.jpg" alt="Bureau image1" />
       </div>
     </div>
+    </div>
+    <div class="dropdown3">
+      <button class="dropbtn3">Dropdown</button>
+      <div class="dropdown-content3">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
     </div>
   </body>
 </html>
