--- a/Index.html
+++ b/Index.html
@@ -40,13 +40,13 @@
         <i class="fa fa-bars"></i>
       </a>
     </div> -->
-    <div class="logo-container">
+    <!-- <div class="logo-container">
       <img src="./assets/images/logo.png" alt="logo-Sulpice" />
       <img
         src="./assets/images/notaire-de-fance-logo-777C89063C-seeklogo.com.png"
         alt="logo-notaire"
       />
-    </div>
+    </div> -->
     <div class="topnav" id="myTopnav">
       <a href="#home" class="active">Home</a>
       <a href="#news">News</a>
@@ -79,6 +79,13 @@
         >&#9776;</a
       >
 
+    </div>
+    <div class="logo-container">
+      <img src="./assets/images/logo.png" alt="logo-Sulpice" />
+      <img
+        src="./assets/images/notaire-de-fance-logo-777C89063C-seeklogo.com.png"
+        alt="logo-notaire"
+      />
     </div>
 
     <!-- <div style="padding-left: 16px">
