--- a/Index.html
+++ b/Index.html
@@ -111,14 +111,14 @@
       </div>
     </div>
     </div>
-    <div class="dropdown3">
+    <!-- <div class="dropdown3">
       <button class="dropbtn3">Dropdown</button>
       <div class="dropdown-content3">
         <a href="#">Link 1</a>
         <a href="#">Link 2</a>
         <a href="#">Link 3</a>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
 
