--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <script src="https://kit.fontawesome.com/a528402c70.js" crossorigin="anonymous"></script>
     <link href="/css/style.css" rel="stylesheet" />
     <script src="./js/script.js" defer></script>
   </head>
@@ -48,7 +49,7 @@
       />
     </div> -->
     <div class="topnav" id="myTopnav">
-      <a href="#home" class="active">Home</a>
+      <a href="#home" class="active"><i class="fas fa-home"></i></a>
       <a href="#news">News</a>
       <a href="#contact">Contact</a>
       <a href="#">Link 1</a>
