grid en place avec footer en pied de page sur toute la longueur

--- a/Index.html
+++ b/Index.html
@@ -21,11 +21,13 @@
     <header>
       <nav>
         <div class="wrapper">
-          <div class="logo">
-            <a href="#"
-              ><img src="./Ekklesia-web.png" class="logo" alt="bible"
-            /></a>
-          </div>
+            <div class="logo-container">
+              <img src="./assets/images/logo.png" alt="logo-Sulpice" />
+              <img
+                src="./assets/images/notaire-de-fance-logo-777C89063C-seeklogo.com.png"
+                alt="logo-notaire"
+              />
+            </div>
           <input type="radio" name="slider" id="menu-btn" />
           <input type="radio" name="slider" id="close-btn" />
           <ul class="nav-links">
@@ -35,13 +37,13 @@
               ></label>
             </li>
             <li><a href="index.html">Accueil</a></li>
-            <li><a href="presentation.html">Présentation</a></li>
-            <li><a href="prestations.html">Nos prestations</a></li>
+            <li><a href="presentation.html">Etude</a></li>
+            <li><a href="prestations.html">Tarifs</a></li>
 
             <li>
-              <a href="#" class="desktop-item">Dropdown Menu</a>
+              <a href="#" class="desktop-item">Compétences</a>
               <input type="checkbox" id="showDrop" />
-              <label for="showDrop" class="mobile-item">Dropdown Menu</label>
+              <label for="showDrop" class="mobile-item">Compétences</label>
               <ul class="drop-menu">
                 <li><a href="#">Drop menu 1</a></li>
                 <li><a href="#">Drop menu 2</a></li>
@@ -98,13 +100,14 @@
           ></label>
         </div>
       </nav>
-    <div class="logo-container">
-      <img src="./assets/images/logo.png" alt="logo-Sulpice" />
+      </header>
+    <!-- <div class="logo-container"> -->
+      <!-- <img src="./assets/images/logo.png" alt="logo-Sulpice" />
       <img
         src="./assets/images/notaire-de-fance-logo-777C89063C-seeklogo.com.png"
         alt="logo-notaire"
       />
-    </div>
+    </div> -->
 
     <!-- <div style="padding-left: 16px">
       <h2>Responsive Topnav with Dropdown</h2>
@@ -115,6 +118,7 @@
     <div style="padding-left: 16px">
       <h2>Responsive Topnav Example</h2>
       <p>Resize the browser window to see how it works.</p> -->
+      <main>
       <div class="gallery-container">
       <div class="gallery">
         <img src="./assets/images/Façade 1_LI.jpg" alt="Façade étude large" />
@@ -129,6 +133,7 @@
       </div>
     </div>
     </div>
+  </main>
     <!-- <div class="dropdown3">
       <button class="dropbtn3">Dropdown</button>
       <div class="dropdown-content3">
@@ -137,6 +142,7 @@
         <a href="#">Link 3</a>
       </div>
     </div> -->
+    <footer>Footer</footer>
   </body>
 </html>
 
