changement de couleur du nav et mobile

--- a/Index.html
+++ b/Index.html
@@ -21,13 +21,13 @@
     <header>
       <nav>
         <div class="wrapper">
-            <div class="logo-container">
-              <img src="./assets/images/logo.png" alt="logo-Sulpice" />
-              <img
-                src="./assets/images/notaire-de-fance-logo-777C89063C-seeklogo.com.png"
-                alt="logo-notaire"
-              />
-            </div>
+          <div class="logo-container">
+            <img src="./assets/images/logo.png" alt="logo-Sulpice" />
+            <img
+              src="./assets/images/notaire-de-fance-logo-777C89063C-seeklogo.com.png"
+              alt="logo-notaire"
+            />
+          </div>
           <input type="radio" name="slider" id="menu-btn" />
           <input type="radio" name="slider" id="close-btn" />
           <ul class="nav-links">
@@ -100,9 +100,9 @@
           ></label>
         </div>
       </nav>
-      </header>
+    </header>
     <!-- <div class="logo-container"> -->
-      <!-- <img src="./assets/images/logo.png" alt="logo-Sulpice" />
+    <!-- <img src="./assets/images/logo.png" alt="logo-Sulpice" />
       <img
         src="./assets/images/notaire-de-fance-logo-777C89063C-seeklogo.com.png"
         alt="logo-notaire"
@@ -118,22 +118,22 @@
     <div style="padding-left: 16px">
       <h2>Responsive Topnav Example</h2>
       <p>Resize the browser window to see how it works.</p> -->
-      <main>
+    <main>
       <div class="gallery-container">
-      <div class="gallery">
-        <img src="./assets/images/Façade 1_LI.jpg" alt="Façade étude large" />
-        <img src="./assets/images/Façade 3.jpg" alt="façade entréée" />
-        <img src="./assets/images/Bureau 2.jpg" alt="Bureau image2" />
-        <img
-          src="./assets/images/Panonceau de notaire.jpg"
-          alt="Panonceau de notaire"
-        />
-        />
-        <img src="./assets/images/Bureau 3.jpg" alt="Bureau image1" />
+        <div class="gallery">
+          <img src="./assets/images/Façade 1_LI.jpg" alt="Façade étude large" />
+          <img src="./assets/images/Façade 3.jpg" alt="façade entréée" />
+          <img src="./assets/images/Bureau 2.jpg" alt="Bureau image2" />
+          <img
+            src="./assets/images/Panonceau de notaire.jpg"
+            alt="Panonceau de notaire"
+          />
+          <!-- /> -->
+          <img src="./assets/images/Bureau 3.jpg" alt="Bureau image1" />
+        </div>
       </div>
-    </div>
-    </div>
-  </main>
+      <!-- </div> -->
+    </main>
     <!-- <div class="dropdown3">
       <button class="dropbtn3">Dropdown</button>
       <div class="dropdown-content3">
