layout correct en desktop mise en place du grid du main

--- a/Index.html
+++ b/Index.html
@@ -21,13 +21,13 @@
     <header>
       <nav>
         <div class="wrapper">
-          <div class="logo-container">
+          <!-- <div class="logo-container">
             <img src="./assets/images/logo.png" alt="logo-Sulpice" />
             <img
               src="./assets/images/notaire-de-fance-logo-777C89063C-seeklogo.com.png"
               alt="logo-notaire"
             />
-          </div>
+          </div> -->
           <input type="radio" name="slider" id="menu-btn" />
           <input type="radio" name="slider" id="close-btn" />
           <ul class="nav-links">
@@ -119,6 +119,15 @@
       <h2>Responsive Topnav Example</h2>
       <p>Resize the browser window to see how it works.</p> -->
     <main>
+      <h1>Maitre Jean-François Sulpice</h1>
+
+      <div class="logo-container">
+        <img src="./assets/images/logo.png" alt="logo-Sulpice" />
+        <img
+          src="./assets/images/notaire-de-fance-logo-777C89063C-seeklogo.com.png"
+          alt="logo-notaire"
+        />
+      </div>
       <div class="gallery-container">
         <div class="gallery">
           <img src="./assets/images/Façade 1_LI.jpg" alt="Façade étude large" />
